# armesto

./: Cargo.toml  Makefile  README.md
debian/: changelog  control  copyright  install
src/: dbus.rs  error.rs  lib.rs  main.rs  notification.rs  rofi.rs
