[package]
name = "armesto"
version = "0.0.1"
description = "Another rofication daemon"
authors = ["Ken Gilmer <kgilmer@gmail.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
homepage = "https://github.com/kgilmer/armesto"
repository = "https://github.com/kgilmer/armesto"
keywords = ["notification", "daemon", "dbus", "notify"]
categories = []
include = ["src/**/*", "dbus/*", "build.rs", "Cargo.*", "LICENSE-*", "*.md"]
edition = "2021"
rust-version = "1.64.0"

[dependencies]
dbus = "0.9.7"
dbus-crossroads = "0.5.2"
thiserror = "1.0.40"
serde = { version = "1.0.164", features = ["derive"] }
toml = "0.7.4"
tera = "1.19.0"
regex = "1.8.4"
serde_regex = "1.1.0"
serde_json = "1.0.96"
tracing = "=0.1.37"

[build-dependencies]
dbus-codegen = "0.10.0"

[profile.dev]
opt-level = 0
debug = true
panic = "abort"

[profile.test]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
debug = false
panic = "unwind"
lto = true
codegen-units = 1

[profile.bench]
opt-level = 3
debug = false
